name:          rules
category:      Language
version:       0.1
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/rules/
bug-reports:   http://github.com/ekmett/rules/issues
copyright:     Copyright (C) 2014 Edward A. Kmett
synopsis:      Equality saturation
description:   Equality saturation
build-type:    Simple
extra-source-files: .travis.yml README.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/rules.git

library
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall

  exposed-modules:
    Data.Rule.Forest
    Data.Rule.Alignable

  build-depends:
    base >= 2   && < 5,
    either,
    free,
    comonad,
    parallel,
    transformers
